--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,26 +6,16 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Deploy to Google App Engine
+        uses: google-github-actions/deploy-appengine@v2
         with:
-          node-version: '14'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the app
-        run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+	  project_id: ${{ secrets.GAEPROJECTID }}
+          credentials_json: ${{ secrets.GAECREDENTIALS }}
+          config-file: app.yaml
